import { BaseClient, type ClientOptions } from "./BaseClient.ts";
import type { ListOptions } from "./types.ts";

export interface RoleAssignment {
  address: string;
  role: string;
  grantedBy: string;
  grantedAt: number;
  expiresAt?: number;
}

export interface AccountState {
  address: string;
  isGenesis: boolean;
  roles: string[];
  flags: string[];
}

export interface RolesClientDeps {
  sdk: unknown;
}

/**
 * Client for Roles module (role-based access control)
 */
export class RolesClient extends BaseClient {
  private sdk: unknown;

  constructor(deps: RolesClientDeps, options?: ClientOptions) {
    super(options);
    this.sdk = deps.sdk;
  }

  /**
   * Get all roles assigned to an address
   */
  async getAccountRoles(_address: string): Promise<RoleAssignment[]> {
    try {
      throw new Error("Roles module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "getAccountRoles");
    }
  }

  /**
   * Check if an address has a specific role
   */
  async hasRole(_address: string, _role: string): Promise<boolean> {
    try {
      throw new Error("Roles module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "hasRole");
    }
  }

  /**
   * List all members with a specific role
   */
  async listRoleMembers(_role: string, _options?: ListOptions): Promise<RoleAssignment[]> {
    try {
      throw new Error("Roles module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "listRoleMembers");
    }
  }

  /**
   * Get full account state including roles and flags
   */
  async getAccountState(_address: string): Promise<AccountState | null> {
    try {
      throw new Error("Roles module not yet generated - proto generation needed");
    } catch (error) {
      this.handleQueryError(error, "getAccountState");
    }
  }
}
